fix(core): icon and text gap

--- a/packages/core/scss/components/_buttons.scss
+++ b/packages/core/scss/components/_buttons.scss
@@ -158,3 +158,7 @@ $button-categories: (primary, secondary);
   width: $large-space;
   min-width: $large-space;
 }
+
+.btn-slot-gap {
+  gap: $tiny-space;
+}
